<resources>
    <string name="app_name">Homework 2</string>
    <string name="home_title">Find Your Brew</string>
    <string name="start_button">Get Started</string>
    <string name="results_button">Show Results</string>
    <string name="name_editText">Search by beer name</string>
    <string name="brew_textView">Brewed</string>
    <string name="date_editText">mm/yyyy</string>
    <string name="to_textView">to</string>
    <string name="highPoint_textView">High Point Beer?</string>
    <string name="results">We found %1$s results.</string>
    <string name="toast_alert">Please follow the format: mm/yyyy</string>
    <string name="date_error">Date order is incorrect.</string>
    <string name="equal_dates">Dates are the same. Please remove one.</string>
    <string name="search">Search beers..</string>
    <string name="home_button">Home</string>
</resources>